CSS width fix for description on mobile

--- a/WebComponents/style.css
+++ b/WebComponents/style.css
@@ -310,7 +310,7 @@ label.full {
 }
 
 label .flex div:last-of-type {
-  width: 90%;
+  width: 80%;
   margin-top: -0.4em;
 }
 
@@ -385,7 +385,7 @@ a.sublink {
 }
 
 .description {
-  width: 92% !important;
+  width: 80% !important;
   color: var(--primary) !important;
   font-weight: bold;
   cursor: pointer;
@@ -398,7 +398,7 @@ a.sublink {
   font-weight: normal;
   white-space: pre-line;
   font-size: 16px;
-  max-height: 200px;
+  max-height: 300px;
   overflow-y: auto;
   padding: 0;
   margin-top: 2px !important;
@@ -505,7 +505,6 @@ a.sublink {
 
   .description div {
     font-size: 14px;
-    max-height: 160px;
   }
 
   label:not(.radio) {
